implement a bit of the register.php call (and the DB schema)
